--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{README.md}]
+[{README.md,docker-compose.yml}]
 indent_style = space
 indent_size = 2
