--- a/example/smb.conf
+++ b/example/smb.conf
@@ -3,8 +3,8 @@
 	netbios name = Docker
 	server string = Samba Server Version %v
 
-	# Uncomment to map SMB user joe to system user root
-	#admin users = joe
+	# Uncomment to map SMB user to system user root
+	# admin users = joe
 
 	map to guest = Bad User
 	security = user
